# ease-md

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: plan.md  release-first-version.md  update-deployment.md
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tools/: check-dist.js  check-dist.mjs
