[package]
name = "ease-md"
version = "0.1.0"
description = "Lightweight Typora-style Markdown editor"
authors = ["Ease MD Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
