[package]
name = "ease-md"
version = "0.1.0"
description = "Lightweight Typora-style Markdown editor"
authors = ["Ease MD Contributors"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_Storage_FileSystem"
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
